<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FimFiction</string>
    <string name="unread">Unread</string>
    <string name="readlater">Read Later</string>
    <string name="favorites">Favorites</string>
    <string name="done">~</string>
    <string name="slash">/</string>
    <string name="bullet">&#8226;</string>
    <string name="cover">Cover</string>
    <string name="ms_show">Show M/S</string>
    <string name="ms_hide">Hide M/S</string>
    <string name="title">Title</string>
    <string name="author_id">Author ID</string>
    <string name="shelf_id">Shelf ID</string>
    <string name="favorited">Favorited</string>
    <string name="gore_short">G</string>
    <string name="sex_short">S</string>
    <string name="search">Search</string>
    <string name="search_entry"># %s</string>
    <string name="search_action">Search…</string>
    <string name="favorite">Favorite</string>
    <string name="character_icon">character name</string>
    <string name="plus">+</string>
    <string name="add">Add</string>
    <string name="login_invalid_password">Invalid Password</string>
    <string name="login_invalid_username">Invalid Username</string>
    <string name="login_unknown">Unknown Error</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="login">Login</string>
    <string name="switch_account">Switch Account</string>
    <string name="other">Other</string>
    <string name="hot">Hot</string>
    <string name="updates">Updates</string>
    <string name="top_today">Top - Today</string>
    <string name="completed">Completed</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="top_all_time">Top - All Time</string>
    <string name="top_this_week">Top - This Week</string>
    <string name="longest">Longest</string>
    <string name="most_comments">Most Comments</string>
    <string name="update">Update</string>
    <string name="reset">Reset</string>
    <string name="rename">Rename</string>
    <string name="delete_button">x</string>
    <string name="missing_reader">You need an epub reader to open stories. Recommended is Moon+ Reader (free).</string>
    <string name="missing_reader_link">Moon+ Reader</string>
    <string name="missing_package_name">com.flyersoft.moonreader</string>
    <string name="missing_gallery">You need an image viewer to open this image.</string>
    <string name="ok">Dismiss</string>
    <string name="complete">Complete</string>
    <string name="incomplete">Incomplete</string>
    <string name="on_hiatus">On Hiatus</string>
    <string name="cancelled">Cancelled</string>
    <string name="everyone">Everyone</string>
    <string name="teen">Teen</string>
    <string name="mature">Mature</string>
    <string name="add_tag">Add Tag</string>
    <array name="content_rating">
        <item>Any</item>
        <item>Everyone</item>
        <item>Teen</item>
        <item>Mature</item>
    </array>
    <array name="category">
        <item>Romance</item>
        <item>Tragedy</item>
        <item>Sad</item>
        <item>Dark</item>
        <item>Comedy</item>
        <item>Random</item>
        <item>Crossover</item>
        <item>Adventure</item>
        <item>Slice of Life</item>
        <item>Alternate Universe</item>
        <item>Human</item>
        <item>Anthro</item>
    </array>
    <array name="order">
        <item>First Posted</item>
        <item>Hot</item>
        <item>Update Date</item>
        <item>Rating</item>
        <item>Views</item>
        <item>Words</item>
        <item>Comments</item>
    </array>
    <string name="error_cannot_parse">Could not parse story URL.</string>
    <string name="error_cannot_find">Story not found.</string>
    <string name="error_cannot_load">An error occurred, see log for details.</string>
    <string name="shelves">Shelves</string>
</resources>
