<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <EditText
            android:hint="@string/username"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:singleLine="true"
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:layout_below="@id/username"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remember"
            android:layout_below="@id/password"
            android:checked="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/remember"
            android:onClick="@id/remember"
            style="@android:style/TextAppearance.Medium"
            android:layout_toRightOf="@id/remember"
            android:text="@string/remember"/>

    <Button
            android:id="@+id/login"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/remember"/>

</RelativeLayout>
