<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        android:layout_width="fill_parent"
                                        android:layout_height="fill_parent"
                                        android:id="@+id/drawer">

    <uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ListView
                android:id="@+id/stories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="#222222">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <Button
                    android:id="@+id/unread"
                    android:text="@string/unread"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/DrawerButton"/>

            <Button
                    android:id="@+id/favorite"
                    android:text="@string/favorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/DrawerButton"/>

            <Button
                    android:id="@+id/readlater"
                    android:text="@string/readlater"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/DrawerButton"/>

            <LinearLayout
                    android:id="@+id/searches"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            </LinearLayout>

            <Button
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_action"
                    style="@style/DrawerButton"/>
        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.DrawerLayout>

